# mochi-thallium

./: .clang-format  CHANGELOG  CMakeLists.txt  Doxyfile  README.md  spack.yaml
.github/workflows/: codecov.yml  doxygen.yml  mochi-cla.yml  test.yml
docs/examples/thallium/01_init/: CMakeLists.txt  server.cpp
docs/examples/thallium/02_hello/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/03_args/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/04_lambdas/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/05_stop/: CMakeLists.txt  server.cpp
docs/examples/thallium/06_stl/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/07_serialization/: point.hpp
docs/examples/thallium/08_rdma/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/09_providers/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/10_abt_intro/: CMakeLists.txt  main.cpp
docs/examples/thallium/12_rpc_pool/: CMakeLists.txt  server.cpp
docs/examples/thallium/13_abt_custom/: CMakeLists.txt  main.cpp
docs/examples/thallium/14_async/: CMakeLists.txt  client.cpp  server.cpp
docs/examples/thallium/15_finalize/: CMakeLists.txt  server.cpp
docs/examples/thallium/16_context/: CMakeLists.txt  client.cpp  point.hpp  server.cpp
docs/examples/thallium/17_logging/: CMakeLists.txt  server.cpp
docs/examples/thallium/18_timed_cb/: CMakeLists.txt  server.cpp
docs/examples/thallium/19_config/: CMakeLists.txt  server.cpp
docs/examples/thallium/22_timed_rdma/: CMakeLists.txt  client.cpp  server.cpp
docs/source/: thallium.rst
docs/source/thallium/: 01_init.rst  02_hello.rst  03_args.rst  04_lambdas.rst  05_stop.rst  06_stl.rst  07_serialization.rst  08_rdma.rst  09_providers.rst  10_abt_intro.rst  11_abt_classes.rst  12_rpc_pool.rst  13_abt_custom.rst  14_async.rst  15_finalize.rst  16_context.rst  17_logging.rst  18_timed_cb.rst  19_config.rst  20_timed_rdma.rst  cpp_api.rst
examples/: CMakeLists.txt
examples/00_init/: CMakeLists.txt  client.cpp  server.cpp
examples/01_hello/: CMakeLists.txt  client.cpp  server.cpp
examples/02_sum/: CMakeLists.txt  client.cpp  server.cpp
examples/03_lambda/: CMakeLists.txt  client.cpp  server.cpp
examples/04_stop/: CMakeLists.txt  client.cpp  server.cpp
examples/05_stl/: CMakeLists.txt  client.cpp  server.cpp
examples/06_custom/: CMakeLists.txt  client.cpp  point.hpp  server.cpp
examples/07_rdma/: CMakeLists.txt  client.cpp  server.cpp
examples/08_async/: CMakeLists.txt  client.cpp  server.cpp
examples/09_provider/: CMakeLists.txt  client.cpp  server.cpp
examples/10_threads/: CMakeLists.txt  main.cpp
examples/11_tasks/: CMakeLists.txt  main.cpp
examples/12_shared_pool/: CMakeLists.txt  main.cpp
examples/13_mutex/: CMakeLists.txt  main.cpp
examples/14_custom_sched/: CMakeLists.txt  main.cpp
examples/15_rpc_pool/: CMakeLists.txt  client.cpp  server.cpp
examples/16_context/: CMakeLists.txt  client.cpp  server.cpp
examples/17_partial/: CMakeLists.txt  client.cpp  server.cpp
examples/18_config/: CMakeLists.txt  server.cpp
examples/19_logging/: CMakeLists.txt  server.cpp
examples/20_timed_cb/: CMakeLists.txt  server.cpp
examples/21_encoding/: CMakeLists.txt  client.cpp  encoder.hpp  server.cpp
examples/22_timed_rdma/: CMakeLists.txt  client.cpp  server.cpp
include/: thallium.hpp
include/thallium/: abt.hpp  abt_errors.hpp  anonymous.hpp  async_response.hpp  barrier.hpp  buffer.hpp  bulk.hpp  bulk_mode.hpp  callable_remote_procedure.hpp  condition_variable.hpp  config.hpp.in  endpoint.hpp  engine.hpp  eventual.hpp  exception.hpp  function_cast.hpp  function_traits.hpp  function_util.hpp  future.hpp  logger.hpp  managed.hpp  margo_engine.hpp  margo_exception.hpp  margo_instance_ref.hpp  mutex.hpp  packed_data.hpp  packed_response.hpp  pool.hpp  proc_basic.hpp  proc_buffer.hpp  proc_object.hpp  proc_tuple.hpp  proc_vector.hpp  provider.hpp  provider_handle.hpp  reference_util.hpp  remote_bulk.hpp  remote_procedure.hpp  request.hpp  resolved_bulk.hpp  (+14 more)
include/thallium/serialization/: buffer_input_archive.hpp  buffer_output_archive.hpp  proc_input_archive.hpp  proc_output_archive.hpp  serialize.hpp
include/thallium/serialization/cereal/: archives.hpp
include/thallium/serialization/stl/: array.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  multimap.hpp  multiset.hpp  (+9 more)
src/: CMakeLists.txt  abt_errors.cpp  async_response.cpp  bulk.cpp  callable_remote_procedure.cpp  endpoint.cpp  engine.cpp  margo_engine.cpp  margo_exception.cpp  pool.cpp  proc_buffer.cpp  remote_bulk.cpp  remote_procedure.cpp  request.cpp  resolved_bulk.cpp  scheduler.cpp  serialization.cpp  task.cpp  thallium-config.cmake.in  thallium.pc.in  thread.cpp
test/: 00_hello.cpp  CMakeLists.txt  TestBulk.cpp  TestBulkClient.cpp  TestBulkServer.cpp  TestHelloWorld.cpp  TestHelloWorldClient.cpp  TestHelloWorldServer.cpp  TestSerialization.cpp
test/unit/: test_argobots_pools.cpp  test_argobots_schedulers.cpp  test_argobots_threads.cpp  test_argobots_xstreams.cpp  test_async_operations.cpp  test_bulk_transfers.cpp  test_configuration.cpp  test_edge_cases.cpp  test_endpoint.cpp  test_engine.cpp  test_error_handling.cpp  test_finalization.cpp  test_logging.cpp  test_main.cpp  test_provider.cpp  test_rpc_advanced.cpp  test_rpc_basic.cpp  test_serialization_context.cpp  test_serialization_custom.cpp  test_serialization_primitives.cpp  test_serialization_stl.cpp  test_sync_primitives.cpp  test_timed_callbacks.cpp
tests/: TestBulkServer.cpp  TestHelloWorldServer.cpp  TestSerialization.cpp  spack.yaml
tests/unit/: test_argobots_pools.cpp  test_argobots_xstreams.cpp  test_async_operations.cpp  test_bulk_transfers.cpp  test_configuration.cpp  test_edge_cases.cpp  test_endpoint.cpp  test_engine.cpp  test_error_handling.cpp  test_finalization.cpp  test_helpers.hpp  test_logging.cpp  test_provider.cpp  test_rpc_advanced.cpp  test_serialization_context.cpp  test_serialization_custom.cpp  test_serialization_primitives.cpp  test_sync_primitives.cpp  test_timed_callbacks.cpp
