add_subdirectory(00_init)
add_subdirectory(01_hello)
add_subdirectory(02_sum)
add_subdirectory(03_lambda)
add_subdirectory(04_stop)
add_subdirectory(05_stl)
add_subdirectory(06_custom)
add_subdirectory(07_rdma)
add_subdirectory(08_async)
add_subdirectory(09_provider)
add_subdirectory(10_threads)
add_subdirectory(11_tasks)
add_subdirectory(12_shared_pool)
add_subdirectory(13_mutex)
add_subdirectory(14_custom_sched)
add_subdirectory(15_rpc_pool)
